--- a/conf/karakeep-web.service
+++ b/conf/karakeep-web.service
@@ -1,19 +1,19 @@
 [Unit]
 Description=Karakeep web
-Wants=network.target karakeep-workers.service
-After=network.target karakeep-workers.service
+Wants=network.target __APP__-workers.service
+After=network.target __APP__-workers.service
 
 [Service]
-User=karakeep
-Group=karakeep
+User=__APP__
+Group=__APP__
 Restart=on-failure
-EnvironmentFile=${ENV_FILE}
-WorkingDirectory=${INSTALL_DIR}/apps/web
+EnvironmentFile=__INSTALL_DIR__/karakeep.env
+WorkingDirectory=__INSTALL_DIR__/apps/web
 ExecStart=/usr/bin/pnpm start
-StandardOutput=file:${LOG_DIR}/karakeep-web.log
-StandardError=file:${LOG_DIR}/karakeep-web.log
+StandardOutput=file:/var/log/__APP__/__APP__-web.log
+StandardError=file:/var/log/__APP__/__APP__-web.log
 TimeoutStopSec=5
-SyslogIdentifier=karakeep-web
+SyslogIdentifier=__APP__-web
 
 [Install]
 WantedBy=multi-user.target
