--- a/conf/.env
+++ b/conf/.env
@@ -1,3 +1,16 @@
 # See https://docs.karakeep.app/configuration for more information
+
+NODE_ENV=production
+SERVER_VERSION=__RELEASE__
+NEXTAUTH_SECRET="__SECRET__"
+NEXTAUTH_URL="http://127.0.0.1:__PORT__"
 DATA_DIR=__DATA_DIR__
-NEXTAUTH_SECRET=<secret>
+MEILI_ADDR="http://127.0.0.1:7700"
+MEILI_MASTER_KEY="${MASTER_KEY}"
+BROWSER_WEB_URL="http://127.0.0.1:9222"
+# CRAWLER_VIDEO_DOWNLOAD=true
+# CRAWLER_VIDEO_DOWNLOAD_MAX_SIZE=
+# OPENAI_API_KEY=
+# OLLAMA_BASE_URL=
+# INFERENCE_TEXT_MODEL=
+# INFERENCE_IMAGE_MODEL=
