--- a/conf/.env
+++ b/conf/.env
@@ -5,9 +5,9 @@ SERVER_VERSION=__RELEASE__
 NEXTAUTH_SECRET="__SECRET__"
 NEXTAUTH_URL="http://127.0.0.1:__PORT__"
 DATA_DIR=__DATA_DIR__
-MEILI_ADDR="http://127.0.0.1:7700"
-MEILI_MASTER_KEY="${MASTER_KEY}"
-BROWSER_WEB_URL="http://127.0.0.1:9222"
+#MEILI_ADDR="http://127.0.0.1:7700"
+#MEILI_MASTER_KEY="${MASTER_KEY}"
+BROWSER_WEB_URL="http://127.0.0.1:__PORT_BROWSER__"
 # CRAWLER_VIDEO_DOWNLOAD=true
 # CRAWLER_VIDEO_DOWNLOAD_MAX_SIZE=
 # OPENAI_API_KEY=
