--- a/conf/karakeep-web.service
+++ b/conf/karakeep-web.service
@@ -8,8 +8,9 @@ User=__APP__
 Group=__APP__
 Restart=on-failure
 EnvironmentFile=__INSTALL_DIR__/karakeep.env
+Environment="PATH=__PATH_WITH_NODEJS__"
 WorkingDirectory=__INSTALL_DIR__/apps/web
-ExecStart=/usr/bin/pnpm start
+ExecStart=__NODEJS_DIR__/pnpm start
 StandardOutput=file:/var/log/__APP__/__APP__-web.log
 StandardError=file:/var/log/__APP__/__APP__-web.log
 TimeoutStopSec=5
