--- a/conf/karakeep-workers.service
+++ b/conf/karakeep-workers.service
@@ -8,8 +8,9 @@ User=__APP__
 Group=__APP__
 Restart=always
 EnvironmentFile=__INSTALL_DIR__/karakeep.env
+Environment="PATH=__PATH_WITH_NODEJS__"
 WorkingDirectory=__INSTALL_DIR__/apps/workers
-ExecStart=/usr/bin/pnpm run start:prod
+ExecStart=__NODEJS_DIR__/pnpm run start:prod
 StandardOutput=file:/var/log/__APP__/karakeep-workers.log
 StandardError=file:/var/log/__APP__/karakeep-workers.log
 TimeoutStopSec=5
