--- a/conf/.env
+++ b/conf/.env
@@ -3,11 +3,11 @@
 NODE_ENV=production
 SERVER_VERSION=__RELEASE__
 NEXTAUTH_SECRET="__SECRET__"
-NEXTAUTH_URL="http://127.0.0.1:__PORT__"
+NEXTAUTH_URL="http://127.0.0.1:__PORT_WEB__"
 DATA_DIR=__DATA_DIR__
 #MEILI_ADDR="http://127.0.0.1:7700"
 #MEILI_MASTER_KEY="${MASTER_KEY}"
-BROWSER_WEB_URL="http://127.0.0.1:__PORT_BROWSER__"
+BROWSER_WEB_URL="http://localhost:__PORT_BROWSER__"
 # CRAWLER_VIDEO_DOWNLOAD=true
 # CRAWLER_VIDEO_DOWNLOAD_MAX_SIZE=
 # OPENAI_API_KEY=
