--- a/conf/karakeep-browser.service
+++ b/conf/karakeep-browser.service
@@ -3,10 +3,10 @@ Description=Karakeep headless browser
 After=network.target
 
 [Service]
-User=__APP__
-Group=__APP__
+User=root
+Group=root
 Restart=on-failure
-ExecStart=/usr/bin/chromium --headless --no-sandbox --disable-gpu --disable-dev-shm-usage --remote-debugging-address=127.0.0.1 --remote-debugging-port=__PORT_BROWSER__ --hide-scrollbars
+ExecStart=/usr/bin/chromium --headless --no-sandbox --disable-gpu --disable-dev-shm-usage --remote-debugging-address=localhost --remote-debugging-port=__PORT_BROWSER__ --hide-scrollbars
 TimeoutStopSec=5
 SyslogIdentifier=__APP__-browser
 
